# ncluster

./: .gitignore  LICENSE  README.md  requirements.txt  requirements_benchmarks.txt  setup.cfg  setup.py  sync.py
.circleci/: config.yml
.doctrees/: environment.pickle  index.doctree
.doctrees/.eggs/requests-2.19.1-py3.6.egg/EGG-INFO/: DESCRIPTION.doctree
.doctrees/.eggs/urllib3-1.23-py3.6.egg/EGG-INFO/: DESCRIPTION.doctree
benchmarks/: README.md  mpi_two_machines.py  pytorch_p2p.py  pytorch_p2p_multigroup.py  pytorch_two_machines.py  ray_ps.py  ray_two_machines.py  ray_two_machines_local.py  requirements.txt  summary.txt  tf_two_machines.py  tf_two_machines_local.py  util.py
docs/: .buildinfo  genindex.html  index.html  objects.inv  search.html  searchindex.js
docs/_sources/: index.rst.txt
examples/: deleteme.py  gpubox.py  gpubox_jupyter_notebook_config.py  launch_16_instances.py  ray_example.py  requirements.txt  simple_job.py  simple_task.py  simple_task_local.py  simple_tf.py  tf_adder.py  tf_adder_tb.py  tf_adder_with_tensorboard.py
ncluster/: __init__.py  _version.py  aws_backend.py  aws_create_resources.py  aws_delete_resources.py  aws_util.py  backend.py  local_backend.py  ncluster.py  ncluster_cloud_setup.py  ncluster_cloud_wipe.py  ncluster_globals.py  old_backend.py  summary.txt  test.py  tmux_backend.py  util.py
tests/: integration_test.py  join_test.py  launch_16_instances.py  logdir_test.py  make_task_test.py  many_commands_test.py  run_test.py  simple_job_run.py
tools/: ncluster  nsync
(+2 files in other folders)
