[metadata]
name = ncluster
version = 0.1.7
author = Yaroslav Bulatov
author_email = yaroslavvb@gmail.com
description= Lightweight interface to launching jobs in the cloud
long_description = file: README.md
long_description_content_type = text/markdown
license_file = LICENSE
url = https://github.com/diux-dev/ncluster
classifiers =
  Programming Language :: Python :: 3
  License :: OSI Approved :: MIT License
  Operating System :: OS Independent

[options]
python_requires = >= 3.6
setup_requires =
  setuptools >= 38.6
  pip >= 10
  twine >= 1.11
packages = find:
